fixed menu overflowing page.

--- a/sass/custom-styles.scss
+++ b/sass/custom-styles.scss
@@ -314,7 +314,11 @@ header {
               }
             }
           }
-  
+          &:last-child {
+            ul {
+              right: 0;
+            }
+          }
         }
   
       }
